Fish cycling feature and code cleanup
+ Added Fish Cycling feature to automatically cycle through all available fish types when fishing.
- Moved reflection-backed properties on FishingMod class to its own partial file for improved code readability.
+ Added sv_fishing_fishcyling command to enable or disable the Fish Cycling feature from the SMAPI console.
- Referenced StardewValley assemblies are now excluded from output directories when the mod is built.
- Other minor code improvements.

--- a/SvFishingMod/SvFishingMod.csproj
+++ b/SvFishingMod/SvFishingMod.csproj
@@ -35,12 +35,15 @@
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553" />
     <Reference Include="Netcode">
       <HintPath>H:\GAMES\SteamLibrary\steamapps\common\Stardew Valley\Netcode.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Stardew Valley">
       <HintPath>H:\GAMES\SteamLibrary\steamapps\common\Stardew Valley\Stardew Valley.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StardewModdingAPI">
       <HintPath>H:\GAMES\SteamLibrary\steamapps\common\Stardew Valley\StardewModdingAPI.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,7 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CircularBuffer.cs" />
     <Compile Include="FishingMod.cs" />
+    <Compile Include="FishingMod.reflected.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
