--- a/SvFishingMod/manifest.json
+++ b/SvFishingMod/manifest.json
@@ -5,5 +5,6 @@
   "Description": "Allows for fishing mechanics customization.",
   "UniqueID": "KDERazorback.SvFishingMod",
   "EntryDll": "SvFishingMod.dll",
-  "MinimumApiVersion": "3.1.0"
+  "MinimumApiVersion": "3.1.0",
+  "UpdateKeys": [ "GitHub:KDERazorback/SvFishingMod", "Nexus:6403" ]
 }
