Proposed support for Server-Client settings synchronization
+ Added EnforceMultiplayerSettings property to config file.
- Refactored Settings handling into a Local and Remote variants based on current game play mode.
- Updated module version to 0.1.3

- This commit is a work in progress. Not tested

--- a/SvFishingMod/SvFishingMod.csproj
+++ b/SvFishingMod/SvFishingMod.csproj
@@ -37,6 +37,10 @@
       <HintPath>H:\GAMES\SteamLibrary\steamapps\common\Stardew Valley\Netcode.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="SMAPI.Toolkit.CoreInterfaces">
+      <HintPath>H:\GAMES\SteamLibrary\steamapps\common\Stardew Valley\smapi-internal\SMAPI.Toolkit.CoreInterfaces.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Stardew Valley">
       <HintPath>H:\GAMES\SteamLibrary\steamapps\common\Stardew Valley\Stardew Valley.exe</HintPath>
       <Private>False</Private>
