--- a/SvFishingMod/manifest.json
+++ b/SvFishingMod/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "SvFishingMod",
   "Author": "KDERazorback",
-  "Version": "0.1.3",
-  "Description": "Allows for fishing mechanics customization.",
+  "Version": "1.1.0",
+  "Description": "Allows for fishing mechanics customization, including the removal of the Fishing minigame.",
   "UniqueID": "KDERazorback.SvFishingMod",
   "EntryDll": "SvFishingMod.dll",
-  "MinimumApiVersion": "3.1.0",
+  "MinimumApiVersion": "4.0.0",
   "UpdateKeys": [ "GitHub:KDERazorback/SvFishingMod", "Nexus:6403" ]
 }
